edite sebha showing

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -5,10 +5,10 @@
   "sebha" : "تسبيح",
   "radio": "الاذاعه",
   "hadith_number" : " الحديث رقم",
-  "sbhan_allah" : "سبحان الله",
-  "alhamd_lillahi":"سبحان الله",
-  "allah_akbaru": "الله أكبر",
-  "tahleel" : "لا اله الا الله وحده لاشريك له الملك و له الحمد و هو على كل شئ قدير",
+  "sbhan_allah" : "سبحان الله (33)",
+  "alhamd_lillahi":" الحمد لله (33)",
+  "allah_akbaru": "الله أكبر (33)",
+  "tahleel" : "لا اله الا الله وحده لاشريك له الملك و له الحمد و هو على كل شئ قدير (1)",
   "click_here" : "اضغط هنا",
   "zekr_number" : "الذكر رقم",
   "setting" : "الاعدادات",
