--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,10 +5,10 @@
   "sebha" : "Sebha",
   "radio": "Radio",
   "hadith_number" : "Hadith number",
-  "sbhan_allah" : "Subhan allah",
-  "alhamd_lillahi": "Alhamdu lillah",
-  "allah_akbaru": "Allaho akbar",
-  "tahleel" : "La Elah Ella Allaho Wahdaho La Shareek Lah .. Laho 'Lmolk W Laho 'Lhamdo .. Wa Howa Ala Kulli Shayen Qadir",
+  "sbhan_allah" : "Subhan allah (33)",
+  "alhamd_lillahi": "Alhamdu lillah (33)",
+  "allah_akbaru": "Allaho akbar (33)",
+  "tahleel" : "La Elah Ella Allaho Wahdaho La Shareek Lah .. Laho 'Lmolk W Laho 'Lhamdo .. Wa Howa Ala Kulli Shayen Qadir (1)",
   "click_here" : "Click Here",
   "zekr_number" : "Zekr number",
   "setting" : "setting",
